# webengine-workflow

./: ChangeLog  Makefile.am  README.rst  admin.py  configure.ac  forms.py  models.py  teammodels.py  urls.py  views.py
appteam/: Makefile.am  team_forms.py  team_models.py  team_urls.py  team_views.py
debian/: changelog  control  copyright  rules  sjconf-webengine-team.install  sjconf-webengine-team.postinst  sjconf-webengine-team.prerm  webengine-team.install  webengine-team.postinst  webengine-team.postrm
locale/: Makefile.am
medias/css/: Makefile.am  style.css
medias/img/: Makefile.am
medias/js/: Makefile.am  backbone_structure.js  common.js  compute.js  document_ready_detail_item.js  document_ready_workflow_instance.js  errors.js  progressbar.js  shortcut.js  workflow.js  workflow_admin.js  workflow_index.js
models/: Makefile.am  __init__.py  models.py  teammodels.py
sjconf/: Makefile.am
sjconf/confs/: webengine-team.conf
sjconf/doc/: Makefile.am  sjconf-webengine-team.t2t
sjconf/plugins/: webengine-team.py.in
sjconf/templates/: Makefile.am
sjconf/templates/webengine-team/: Makefile.am
templates/: Makefile.am  admin.html  base.html  index.html  item_new.html  manage_person.html  new_workflow.html  one_category.html  one_item.html  show_workflow.html  workflow.html  workflow_listing.html  workflowinstance_list.html  workflowinstance_new.html  workflowinstance_show.html  workflowinstanceitem_show.html
templatetags/: Makefile.am  parse_ticket.py
